# screener_bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml  render.yaml  seed_stop_holdings.py
.github/workflows/: ci.yml
config/: bot.yaml  paper_trading.yaml
screener_bot/: __init__.py  __main__.py  alerts.py  bot.py  charts.py  config.py  formatting.py  ownership.py  portfolio_store.py  pricecache.py  scheduled_screener.py  technical.py
screener_bot/paper/: __init__.py  engine.py  portfolio.py  reporting.py  signals.py  store.py
tests/: test_alerts.py  test_bot.py  test_charts.py  test_config.py  test_formatting.py  test_handlers.py  test_main.py  test_ownership.py  test_paper_engine.py  test_paper_portfolio.py  test_paper_reporting.py  test_paper_store.py  test_portfolio_commands.py  test_pricecache.py  test_scheduled_screener.py  test_technical.py
