[project]
name = "screener-bot"
version = "0.1.0"
description = "Telegram bot for on-demand screener portfolio checks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "libsql-client>=0.3",
    "mplfinance>=0.12.10b0",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "python-telegram-bot[job-queue]>=21.0",
    "pyyaml>=6.0",
    "screener",
]

[project.scripts]
screener-bot = "screener_bot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pandas-stubs>=2.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "types-PyYAML>=6.0",
]

[tool.uv.sources]
screener = { git = "https://github.com/KarneeshkarV/screener.git" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["screener_bot"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["screener_bot"]
exclude = ["tests"]
disable_error_code = [
    "arg-type",
    "attr-defined",
    "call-overload",
    "index",
    "no-any-return",
    "no-untyped-call",
    "no-untyped-def",
    "operator",
    "return-value",
    "type-arg",
    "union-attr",
    "var-annotated",
]

[[tool.mypy.overrides]]
module = [
    "mplfinance.*",
    "openscreener.*",
    "screener.*",
]
ignore_missing_imports = true
